[project]
name = "multi-agent-system"
version = "0.1.0"
description = "AI-powered multi-agent research pipeline using Groq, Tavily, and Streamlit"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "streamlit>=1.58.0",
    "langchain>=0.2.0",
    "langchain-core>=0.2.0",
    "langchain-community>=0.2.0",
    "langchain-groq>=0.1.0",
    "groq>=0.9.0",
    "tavily-python>=0.3.0",
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
    "lxml>=5.0.0",
    "python-dotenv>=1.0.0",
    "aiohttp>=3.9.0",
    "pandas>=2.0.0",
    "tenacity>=8.2.0",
    "orjson>=3.9.0",
    "pydantic>=2.5.0",
    "html5lib>=1.1",
]
